SFDCProject/src/objects/Energy_Storage__c.object
<CustomObject>
    <fields>
        <fullName>Current_Blended_Utility_Rate__c</fullName>
        <label>Current Blended Utility Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Meter_Instal__c</fullName>
        <label>Date of Meter Install</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ES_kWh__c</fullName>
        <label>ES kWh</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electric_vehicle_charged_after_4PM__c</fullName>
        <label>Electric vehicle charged after 4PM?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meter_Sensor_ID__c</fullName>
        <label>Meter Sensor ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_20_Year_PPA_Lease_Payment__c</fullName>
        <label>Monthly - 20 Year System Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_20_Year_Savings__c</fullName>
        <label>Monthly - Savings (%)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_of_adults_home_during_the_day__c</fullName>
        <label>Number of adults home during the day?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Consumption Meter</relationshipLabel>
        <relationshipName>Energy_Storages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PV_Turnkey__c</fullName>
        <label>PV Turnkey ($/W)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PV_kWdc__c</fullName>
        <label>PV kWdc</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prepaid_20_Year_PPA_Lease_Savings__c</fullName>
        <label>Prepaid - Savings (%)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prepaid_20_Year_PPA_Lease__c</fullName>
        <label>Prepaid - 20 Year System Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time_return_from_work__c</fullName>
        <label>Time return from work?</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-2PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-4PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-6PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6PM+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_A_C__c</fullName>
        <label>Use A/C?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Yearly_kWh_consumption__c</fullName>
        <label>Yearly kWh consumption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Energy Storage</label>
    <nameField>
        <displayFormat>ES-{00000}</displayFormat>
        <label>Consumption Metering Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Energy Storages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>